# ANSG

./: .gitignore  README.md
73mGe/: .gitignore  flake.nix
73mGe/macros/: Calibration.cpp  CalibrationLow.cpp  Constants.hpp  Filter.cpp  Fits.cpp  Histogram.cpp  PixelCalibration.cpp  RooFitTest.cpp  SimFitTest.cpp
73mGe/secrets/: BEF.cpp.age  BEF.hpp.age  ConvertBEF.cpp.age  secrets.nix
78mBr/: flake.nix
YAG-PreProcessing/: flake.nix
YAP-PSD/: flake.nix
YAP-PSD/macros/: AverageWaveforms.cpp  Calibration.cpp  ChargeComparison.cpp  Constants.hpp  GateOptimization.cpp  InitialProcessing.cpp  ShapeIndicator.cpp
YAP-PSD/python/: analysis.py  edge_study.py  noise_study.py  parameter_study.py  proof_of_concept.py  psd_utils.py  regressors.py  shuffle_study.py  torch_models.py
analysis/: analysis.cpp  getsettings.py
analysis/cpp/: .gitignore
analysis/myModules/: TreeModule.cpp  WaveModule.h
analysis/python/: test.py
geant4/: .gitignore
geant4/CZT/: CMakeLists.txt  combineoutputs.py  construction.cc  construction.hh  event.cc  event.hh  generator.hh  physics.cc  run.cc  sim.cc  stepping.cc
geant4/SiLi/: combineoutputs.py  construction.cc  construction.hh  event.cc  event.hh  generator.cc  run.cc  run.mac  stepping.cc  vis.mac
geant4/sim/: run.cc  (+13 more)
rootpractice/: .tut15.c.swp  .tut7.c.swp  data1.txt  data4.txt  data5.root  data5.txt  hstack.cpp  output.root  tut1.c  tut10.c  tut11.c  tut12.c  tut13.c  tut14.c  tut14_plot.c  tut15.c  tut16.c  tut17.c  tut18.c  tut18_c.d  tut2.c  tut20.c  tut21.c  tut24.cpp  tut3.c  tut4.c  tut6.c  tut7.c  tut8.c  tut9.c
(+39 files in other folders)
